--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -18,23 +17,23 @@
         <span class="moreweight">COLMAR</span>
         <span class="lightweight">ACADEMY</span>
       </div>
-      <ul class="main" role="navigation">
-        <li><a href="#" title="On campus">On campus</a></li>
-        <li><a href="#" title="Online">Online</a></li>
-        <li><a href="#" title="For companies">For companies</a></li>
-        <li><a href="#" title="Sign in">Sign in</a></li>
+      <ul class="main">
+        <li><a href="#">On campus</a></li>
+        <li><a href="#">Online</a></li>
+        <li><a href="#">For companies</a></li>
+        <li><a href="#">Sign in</a></li>
       </ul>
     </nav>
       <nav class="mobile">
-        <a href="#" title="ColmarAcadaemy"> <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion"></a>
-        <a href="#" title="On campus"><img src="resources/images/ic-on-campus.svg" alt="on campus student desk"></a>
-        <a href="#" title="Online"><img src="resources\images\ic-online.svg" alt="online learning"></a>
-        <a href="#" title="Sign in"><img src="resources\images\ic-login.svg" alt="login"></a>
+        <a href="#"> <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion"></a>
+        <a href="#"><img src="resources/images/ic-on-campus.svg" alt="on campus student desk"></a>
+        <a href="#"><img src="resources\images\ic-online.svg" alt="online learning"></a>
+        <a href="#"><img src="resources\images\ic-login.svg" alt="login"></a>
     </nav>
  </header>
 
 <!--main-container-->
-<div class="main-container" role="presentation">
+<div class="main-container">
 
 <!--container1-->
      <div class="container1">
@@ -49,7 +48,7 @@
     </div>
 
 <!--container 2-->
-     <div class="container2" role="presentation">
+     <div class="container2">
       <div class="item2-1">
          <img src="resources\images\information-main.jpg" alt="male reading information about course options">
          <h1>It doesn't hurt to keep practicing</h1>
@@ -66,7 +65,7 @@
           <div class="item-description">
               <h2 class="item-description">Orientation date</h2>
               <p class="item-description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
-              <p class="item-description"> <a href="#" title="Read more about our orientation dates" role="link">Read more</a></p>
+              <p class="item-description"> <a href="#">Read more</a></p>
             </div>
          </div>
          <div class="item2-3-b">
@@ -74,7 +73,7 @@
            <div class="item-description">
             <h2 class="item-description">Our campus</h2>
             <p class="item-description">Find which campus is close by you</p>
-            <p class="item-description"><a href="#" title="Find out more about our campus" role="link">Read more</a></p>
+            <p class="item-description"><a href="#">Read more</a></p>
             </div>
          </div>
          <div class="item2-4-c">
@@ -82,7 +81,7 @@
           <div class="item-description">
             <h2 class="item-description">Our guest lecture</h2>
             <p class="item-description">Join a keynote with Oliver Sack about music in medical treatment</p>
-            <p class="item-description"><a href="#" title="Our guest lecture" role="link">Read more</a></p>
+            <p class="item-description"><a href="#">Read more</a></p>
             </div>
          </div>
       </div>
@@ -92,27 +91,27 @@
 
     <div class="mobile-container2">
         <div class="mobile-item">
-          <img src="resources\images\information-orientation-mobile.jpg" alt="Orientation date, image of people walkin on cobble stone" role="presentation">
+          <img src="resources\images\information-orientation-mobile.jpg" alt="Orientation date, image of people walkin on cobble stone">
           <div class="mobile-item-description">
             <h2>Orientation date</h2>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <p><a href="#" title="Read more about our orientation dates" role="link">Read more</a></p>
+            <p><a href="#">Read more</a></p>
           </div>
          </div>
          <div class="mobile-item">
-            <img src="resources\images\information-campus-mobile.jpg" alt="Our campus, image of library" role="presentation">
+            <img src="resources\images\information-campus-mobile.jpg" alt="Our campus, image of library">
             <div class="mobile-item-description">
             <h2>Our campus</h2>
             <p>Find which campus is close by you</p>
-            <p><a href="#" title="Find out more about our campus" role="link">Read more</a></p>
+            <p><a href="#">Read more</a></p>
           </div>
          </div>
          <div class="mobile-item">
-            <img src="resources\images\information-guest-lecture-mobile.jpg" alt="Our guest lectures, image showing guest lecture" role="presentation">
+            <img src="resources\images\information-guest-lecture-mobile.jpg" alt="Our guest lectures, image showing guest lecture">
             <div class="mobile-item-description">
             <h2>Our guest lecture</h2>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <p><a href="#" title="Our guest lecture" role="link">Read more</a></p>
+            <p><a href="#">Read more</a></p>
           </div>
          </div>
       </div>
@@ -124,7 +123,7 @@
         </div>
         <div class="course-list">
           <div class="course-items">
-          <img src="resources\images\course-software.jpg" alt="Software engineering course" role="presentation">
+          <img src="resources\images\course-software.jpg" alt="Software engineering course">
            <div class="course-description">
              <h2>Software engineering</h2>
              <h3>courses</h3>
@@ -132,7 +131,7 @@
            </div>
          </div>
         <div class="course-items">
-          <img src="resources\images\course-computer-art.jpg" alt="Computer art course,person holding phone" role="presentation">
+          <img src="resources\images\course-computer-art.jpg" alt="Computer art course,person holding phone">
          <div class="course-description">
            <h2>Computer art</h2>
            <h3>courses</h3>
@@ -140,7 +139,7 @@
          </div>
         </div>
         <div class="course-items">
-          <img src="resources\images\course-design.jpg" alt="Design course, person with camera" role="presentation">
+          <img src="resources\images\course-design.jpg" alt="Design course, person with camera">
           <div class="course-description">
             <h2>Design</h2>
             <h3>courses</h3>
@@ -148,7 +147,7 @@
           </div>
         </div>
         <div class="course-items">
-          <img src="resources\images\course-data.jpg" alt="Data course, laptop with data graph" role="presentation">
+          <img src="resources\images\course-data.jpg" alt="Data course, laptop with data graph">
           <div class="course-description">
             <h2>Data</h2>
             <h3>courses</h3>
@@ -156,7 +155,7 @@
           </div>
         </div>
         <div class="course-items">
-          <img src="resources\images\course-business.jpg" alt="Business course. chess board" role="presentation">
+          <img src="resources\images\course-business.jpg" alt="Business course. chess board">
           <div class="course-description">
             <h2>Business</h2>
             <h3>courses</h3>
@@ -164,7 +163,7 @@
           </div>
         </div>
         <div class="course-items">
-          <img src="resources\images\course-marketing.jpg" alt="Marketing course, person with analysing watch" role="presentation">
+          <img src="resources\images\course-marketing.jpg" alt="Marketing course, person with analysing watch">
           <div class="course-description">
             <h2>Marketing</h2>
             <h3>courses</h3>
@@ -176,22 +175,22 @@
       <!--mobile-container3-->
       <div class="mobile-course-section">
         <div class="mobile-course-list">
-          <div class="mobile-course-items" role="link">
+          <div class="mobile-course-items">
              <h2>Software engineering</h2>
           </div>
-          <div class="mobile-course-items" role="link">
+          <div class="mobile-course-items">
            <h2>Computer art</h2>
           </div>
-        <div class="mobile-course-items" role="link">
+        <div class="mobile-course-items">
             <h2>Design</h2>
           </div>
-        <div class="mobile-course-items" role="link">
+        <div class="mobile-course-items">
             <h2>Data</h2>
         </div>
-        <div class="mobile-course-items" role="link">
+        <div class="mobile-course-items">
             <h2>Business</h2>
           </div>
-        <div class="mobile-course-items" role="link">
+        <div class="mobile-course-items">
             <h2>Marketing</h2>
           </div>
         </div>
@@ -202,7 +201,7 @@
   </div>
   <div class="thesis-container">
    <div class="item-video">
-      <video alt="Student showcase video, video showing changing colours in a building throughout the day" src="resources\videos\thesis.mp4" controls autoplay poster="posterimage.jpg">
+      <video src="resources\videos\thesis.mp4" controls autoplay poster="posterimage.jpg">
       </video>
       <div class="video-description">
        <h1>Reimaging urban</h1>
@@ -235,8 +234,8 @@
 <footer>
   <div>@2016 Colmar Acadamy All rights reserved</div>
   <div class="footer-links">
-    <a href="#" title="Terms">Terms</a>
-    <a href="#" title="Privacy">Privacy</a>
+    <a href="#">Terms</a>
+    <a href="#">Privacy</a>
   </div>
 </footer>
   </body>
